[gd_scene load_steps=7 format=3 uid="uid://3ee4ueuvxloy"]

[ext_resource type="Script" path="res://cannon/cannon.gd" id="1_irqo2"]
[ext_resource type="Texture2D" uid="uid://m4qvrocjgjw1" path="res://cannon/cannon_base.png" id="2_r5tpf"]
[ext_resource type="Texture2D" uid="uid://boty35uaylx76" path="res://cannon/cannon_solo.png" id="3_pw2aq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ws4cy"]
radius = 18.0278

[sub_resource type="CircleShape2D" id="CircleShape2D_krbc1"]
radius = 242.124

[sub_resource type="Gradient" id="Gradient_2ps7r"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[node name="Cannon" type="Area2D" groups=["Cannon"]]
script = ExtResource("1_irqo2")
_missle_path = "res://missle/missle.tscn"

[node name="CannonBase" type="Sprite2D" parent="."]
visible = false
position = Vector2(-1, 0)
texture = ExtResource("2_r5tpf")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("3_pw2aq")

[node name="LaunchMarker" type="Marker2D" parent="Sprite"]
position = Vector2(36, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ws4cy")

[node name="TargetArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TargetArea"]
shape = SubResource("CircleShape2D_krbc1")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(36, 0)
emitting = false
amount = 20
lifetime = 0.4
one_shot = true
explosiveness = 1.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 40.0
initial_velocity_max = 50.0
scale_amount_min = 6.0
scale_amount_max = 10.0
color_ramp = SubResource("Gradient_2ps7r")

[connection signal="body_entered" from="TargetArea" to="." method="_on_target_detector_body_entered"]
[connection signal="body_exited" from="TargetArea" to="." method="_on_target_detector_body_exited"]
